<resources>
    <string name="app_name">СуперВожатый</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">СуперВожатый</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hint_word">Word...</string>
    <string name="hint_title">Введите заголовок</string>
    <string name="hint_desc">Введите описание</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Школа Вожатых</string>
    <string name="menu_slideshow">Справочник</string>
    <string name="menu_library">Музыка</string>
    <string name="menu_numbers">Экстренные телефоны</string>
    <string name="menu_added">Добавленное</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="add_word">Add title</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="game_ice_breaker_1_name">Снежный ком</string>
    <string name="game_ice_breaker_1">Все участники игры садятся или становятся в круг, таким образом, чтобы все играющие видели друг друга. Участники по очереди называют свое имя. Каждый последующий игрок называет имена всех предыдущих игроков прибавляя к ним свое.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="game_ice_breaker_2_name">Японцы</string>
    <string name="game_ice_breaker_2">Все в тесном кругу, плечом к плечу. Ведущий за кругом. Он подходит к любому игроку, стучится к нему (по спине) и говорит: Я японец ….. (называет свое имя), а ты кто? Я японец ….. (тоже называет себя). Зачем пришел? Пойдем со мной гулять на гору Фудзияма. Пойдем. Оба игрока разбегаются по разные стороны круга. Встречаясь, они здороваются кулачками по-японски: «Посикота – посикота». Добегая свой круг, каждый пытается встать на освободившееся место. Кому места не хватило, становится ведущим.</string>
    <string name="game_ice_breaker_3_name">Кто есть кто</string>
    <string name="game_ice_breaker_3">Каждый игрок получает лист бумаги и карандаш. За 5 минут после сигнала ведущего игроки должны познакомится друг с другом, узнавая имя, кем хочет стать. Полученные данные записывают. Выигрывает тот, кто успел больше всех узнать и записать. (иногда дается таблица, по которой нужно опросить как можно больше участников. Там могут быть различные утверждения. Например: Любит мороженое. Есть 2 брата. Обожает животных. Любит учиться. Умеет танцевать. Сочиняет стихи. Часто бывал(а) в лагерях. Слушает попсу. Любит мандарины и т.д.) Обязательно узнать у каждого отвечавшего фамилию и имя.</string>
    <string name="game_ice_breaker_4_name">Суета сует</string>

    <string name="game_ice_breaker_4">Для игры необходимо подготовить карточки. Всем игрокам раздаются карточки, разделённые на 9–16 клеточек. В каждой клеточке записано задание: вписать в неё имя человека, который самый…симпатичный; улыбчивый;
голубоглазый; задумчивый и т.д.
Чем неожиданнее и разнообразнее задания, тем интереснее игра.
</string>
    <string name="lesson_1_1">Одежда всегда должна быть постиранной и поглаженной, и постоянная занятость вожатого – не причина игнорировать это правило.\n\n Короткий маникюр и неяркий макияж (исключением могут быть какие-либо мероприятия).\n\n Подбирайте удобную обувь, в которой ноги не будут сильно уставать;\n\n Не забудьте взять одежду по погоде (теплые вещи, головные уборы, дождевик).\n\n Всегда бодрый вид.</string>
    <string name="lesson_1_2"> Нести ответственность за жизнь и здоровье детей.\n\n Следить и за психологическим состоянием детей и разрешать возникающие конфликты.\n\n Всегда знать, где находятся дети.\n\n Организовывать работу с отрядом, помогать в подготовке к различным мероприятиям.\n\n Будить детей и укладывать их спать\n\n Следить за тем, чтобы дети хорошо питались и соблюдали правила личной гигиены.\n\n Быть доступным 24/7.</string>
    <string name="lesson_2">Важный человек во время работы в лагере – это напарник. Напарником может быть дополнительный вожатый в отряде или помощник вожатого. Необходимо познакомиться с ним и установить тёплые отношения. Конкретно от взаимопонимания и сплоченности зависит настроение отряда на протяжении всей смены. Нужно принять то, что вожатые бывают разные, но напарники плохими не бывают.</string>
    <string name="lesson_2_1">Уважение и авторитет\n\n Нельзя всю работу сделать одному\n\n Никогда не спорьте и не ругайтесь при детях\n\n Не обсуждайте своего напарника с детьми\n\n Равная ответственность\n\n Выбирайте разные отряды со своими друзьями</string>
    <string name="lesson_3_1">До заезда в смену вожатый точно не знает, дети какого возраста будут в его отряде, на занятиях или мастер-классах. Чтобы быть готовым ко всему, нужно знать их возрастные особенности. Не забывайте, что готовых рецептов для решения педагогических ситуаций нет, но есть некоторые закономерности, знание которых поможет найти наиболее удачный выход из ситуации.

Условно детей можно разделить на 3 возрастные группы, каждую из которых мы сейчас разберём подробнее.</string>
    <string name="lesson_3_2">Самое главное, что отличает детей этого возраста, это непоседливость, активность и подвижность. Дети в этом возрасте очень любознательны, поэтому за ними нужен глаз да глаз. Они часто получают травмы и могут этого даже не заметить, поэтому особое внимание следует уделять их безопасности и здоровью.
Что касается внимания и работоспособности, то дети младшего возраста могут работать над одним делом примерно 20 минут, поэтому их не стоит сильно нагружать.\n\n При этом если их заинтересует что-то другое, то они сразу переключат внимание. Но как же тогда их заинтересовать? Для этого меняйте виды деятельности и старайтесь использовать что-то интересное и яркое.
Отдельно стоит сказать про игры. В этом возрасте игра – это самый эффективный метод, использовать который можно буквально везде: для уборки комнат, во время тихого часа, в столовой и т. д. Если вы просто скажете малышу «Убери комнату», то это вряд ли сработает.\n\n Если же вы превратите этот процесс в игру, то сэкономите своё время и силы и одновременно превратите скучный для ребёнка процесс уборки во что-то увлекательное.
Никогда не говорите детям, что они ещё слишком маленькие. Так, вы преуменьшаете их значимость и намекаете на их несамостоятельность. Наоборот, давайте им небольшие поручения и говорите, что доверяете. Поверьте, в этом возрасте дети уже осознают, что такое ответственность, и они с радостью выполнять ваши поручения.</string>
    <string name="lesson_4_1">Игра – это основной вид деятельности в лагере. Чаще всего её определяют как тип осмысленной непродуктивной деятельности, где мотив лежит не в её результате, а в самом процессе.\n\n Важно понимать, что игра – это всегда добровольная деятельность! Не нужно заставлять детей играть, ведь, возможно, ребёнок является интровертом, и ему сложно привыкнуть к новому окружению.</string>
    <string name="lesson_4_2">1  Легенда\nЭто не значит, что нужно говорить детям «Так, сейчас мы сыграем в игру под названием…». Проявите креатив, как-то интересно введите детей в тему игры, придумайте рассказ.\n\n 2  Разъяснение правил\nСамое важное правило здесь: лучше один раз показать, чем 1 раз объяснить на словах.\n\n 3  Раздача ролей\n\n 4  Ход игры и завершение\n\n Игра не всегда предусматривает победителей и какую-то оформленную концовку, поэтому иногда нужно постепенно подводить игру к завершению.</string>
    <string name="hyperlink"><a href="https://t.me/Skazkibot">Skazkibot</a></string>
    <string name="lesson_4_3">игры на знакомство\n\n игры на сплочение\n\n игры на выявление лидера\n\n развлекательные игры\n\n игры с залом\n\n познавательные игры\n\n игры-пятиминутки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>