<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_superman"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_school_1"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_handbook"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="Музыка"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_added"
            android:icon="@drawable/ic_added"
            android:title="@string/menu_added" />
    </group>
</menu>